# ultaml_projects

./: LICENSE  README.md  change_log.md  setup.cfg  setup.py
projects/data/: BaseData.py  DataPreparation.py
projects/data/data_structs/: BaseModels.py  Data.py  DataChangeType.py  DataType.py  DownstreamTask.py  Limits.py  MetaData.py  Model.py  Permission.py  PermissionType.py  SubscriptionLevel.py  TrainingConfig.py  User.py
projects/data/multimodal/: TabularData.py
projects/examples/multimodal/: regression.py
projects/models/multimodal/Regression/: LinearRegression.py  LinearRegressionConfig.py
projects/models/multimodal/TabularClassification/XGboost/: readme.md
projects/models/results_structs/: ClassificationResults.py  RegressionResults.py
projects/models/tabular/xgboost/: TrainingConfig.py  train.py
projects/pipelines/: train.py
projects/utils/: Singleton.py  StorageAdapter.py
