[metadata]
name = ultaml
version = 0.0.1
author = UltaML
author_email = moremohebian@gmail.com
description = Trainer and runner of Ultaml.com
long_description = file: README.md
keywords = one, two
license = Commercial
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
    Topic :: Utilities
    Natural Language :: English
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"
    numpy
    pandas
    matplotlib
    seaborn
    scikit-learn
    scipy
    tqdm
    boto3==1.26.16

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    ultaml_train = projects.pipelines.train:main

[options.packages.find]
exclude =
    examples*
    docs*
    *.tests*